get user impl
